Add link to Job Report Generator in index.html

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <!-- Project Pages link (keeps your current OAuth/Calendar setup intact) -->
           <a class="btn" href="/Overtime-Calculator/" target="_self" rel="noopener">Open</a>
           <a class="btn secondary" href="/Overtime-Calculator/" target="_blank" rel="noopener">Open in new tab</a>
+          <a class="btn" href="/Job-Report-Generator/" target="_self" rel="noopener">Open</a>
         </div>
       </article>
 
