--- a/index.html
+++ b/index.html
@@ -223,6 +223,25 @@
         </div>
       </div>
 
+ <!-- TOOL 5 – ChatGPT Hours Calculator -->
+      <div class="tool-card">
+        <div>
+          <div class="tool-sub">Consultations</div>
+          <h2 class="tool-title">ChatGPT Hours Calculator</h2>
+          <div class="tool-desc">
+            Hours spent on ChatGPT, Tokens Spent and cost per request calculator.
+          </div>
+        </div>
+        <div class="btn-row">
+          <a class="btn primary" href="https://frazerboorman.github.io/ChatGPT-Hours-Calculator/" target="_blank" rel="noopener">
+            Open tool
+          </a>
+          <a class="btn" href="https://github.com/frazerboorman/ChatGPT-Hours-Calculator" target="_blank" rel="noopener">
+            View on GitHub
+          </a>
+        </div>
+      </div>
+      
     </div>
 
     <div class="footer-note">
