--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
           </div>
         </div>
         <div class="btn-row">
-          <a class="btn primary" href="https://frazerboorman.github.io/ChatGPT-Hours-Calculator/" target="_blank" rel="noopener">
+          <a class="btn primary" href="https://frazerboorman.github.io/chatgpt-hours-calculator/" target="_blank" rel="noopener">
             Open tool
           </a>
-          <a class="btn" href="https://github.com/frazerboorman/ChatGPT-Hours-Calculator" target="_blank" rel="noopener">
+          <a class="btn" href="https://frazerboorman.github.io/chatgpt-hours-calculator/" target="_blank" rel="noopener">
             View on GitHub
           </a>
         </div>
