--- a/index.html
+++ b/index.html
@@ -236,7 +236,45 @@
           <a class="btn primary" href="https://frazerboorman.github.io/chatgpt-hours-calculator/" target="_blank" rel="noopener">
             Open tool
           </a>
-          <a class="btn" href="https://frazerboorman.github.io/chatgpt-hours-calculator/" target="_blank" rel="noopener">
+          <a class="btn" href="https://github.com/FrazerBoorman/chatgpt-hours-calculator" target="_blank" rel="noopener">
+            View on GitHub
+          </a>
+        </div>
+      </div>
+
+<!-- TOOL 6 – Replacement Website -->
+      <div class="tool-card">
+        <div>
+          <div class="tool-sub">Website</div>
+          <h2 class="tool-title">Replacement Website Mockup</h2>
+          <div class="tool-desc">
+            Mock up of modernised website
+          </div>
+        </div>
+        <div class="btn-row">
+          <a class="btn primary" href="https://frazerboorman.github.io/AudioVisualDirectUkLtd/" target="_blank" rel="noopener">
+            Open tool
+          </a>
+          <a class="btn" href="https://github.com/FrazerBoorman/AudioVisualDirectUkLtd" target="_blank" rel="noopener">
+            View on GitHub
+          </a>
+        </div>
+      </div>
+
+<!-- TOOL 7 – Landing Page -->
+      <div class="tool-card">
+        <div>
+          <div class="tool-sub">Landing Page</div>
+          <h2 class="tool-title">AVD Tools Landing Page</h2>
+          <div class="tool-desc">
+            Landing page for all AVD Tools.
+          </div>
+        </div>
+        <div class="btn-row">
+          <a class="btn primary" href="https://frazerboorman.github.io//" target="_blank" rel="noopener">
+            Open tool
+          </a>
+          <a class="btn" href="https://github.com/FrazerBoorman/frazerboorman.github.io" target="_blank" rel="noopener">
             View on GitHub
           </a>
         </div>
