Update index added tools strict.html

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
       </div>
 
- <!-- TOOL 5 – ChatGPT Hours Calculator -->
+      <!-- TOOL 5 – ChatGPT Hours Calculator -->
       <div class="tool-card">
         <div>
           <div class="tool-sub">Consultations</div>
@@ -242,7 +242,7 @@
         </div>
       </div>
 
-<!-- TOOL 6 – Replacement Website -->
+      <!-- TOOL 6 – Replacement Website -->
       <div class="tool-card">
         <div>
           <div class="tool-sub">Website</div>
@@ -261,7 +261,7 @@
         </div>
       </div>
 
-<!-- TOOL 7 – Landing Page -->
+      <!-- TOOL 7 – Landing Page -->
       <div class="tool-card">
         <div>
           <div class="tool-sub">Landing Page</div>
@@ -279,7 +279,45 @@
           </a>
         </div>
       </div>
-      
+
+      <!-- TOOL 8 – Automated Overtime Calculator -->
+      <div class="tool-card">
+        <div>
+          <div class="tool-sub">Time &amp; pay (auto)</div>
+          <h2 class="tool-title">Automated Overtime Calculator</h2>
+          <div class="tool-desc">
+            Automated timelogging based on iPhone geofence data, designed to capture work time with minimal manual input.
+          </div>
+        </div>
+        <div class="btn-row">
+          <a class="btn primary" href="https://frazerboorman.github.io/Automated-Overtime-Calculator-/" target="_blank" rel="noopener">
+            Open tool
+          </a>
+          <a class="btn" href="https://github.com/FrazerBoorman/Automated-Overtime-Calculator-" target="_blank" rel="noopener">
+            View on GitHub
+          </a>
+        </div>
+      </div>
+
+      <!-- TOOL 9 – AVD Tool Template -->
+      <div class="tool-card">
+        <div>
+          <div class="tool-sub">Template</div>
+          <h2 class="tool-title">AVD Tool Template</h2>
+          <div class="tool-desc">
+            Base template for new AVD tools, with your standard layout, styling, and wiring ready to customise.
+          </div>
+        </div>
+        <div class="btn-row">
+          <a class="btn primary" href="https://frazerboorman.github.io/AVD-TOOL-Template/" target="_blank" rel="noopener">
+            Open tool
+          </a>
+          <a class="btn" href="https://github.com/FrazerBoorman/AVD-TOOL-Template" target="_blank" rel="noopener">
+            View on GitHub
+          </a>
+        </div>
+      </div>
+
     </div>
 
     <div class="footer-note">
